--- a/src/components/progressBar.scss
+++ b/src/components/progressBar.scss
@@ -1,6 +1,5 @@
 .circular-chart{
-    display: block;
-    margin: 20px auto;
+    margin: 20px;
     max-width: 100%;
 }
   
@@ -10,4 +9,9 @@
   
 .circle {
     fill: none;
+}
+
+.circle-text {
+    text-anchor: middle;
+    font-weight: bold;
 }
